# deconz-cli-plugin

./: CMakeLists.txt  build-macos.sh
